--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<div class="jumbotron">
+</div>
+<div class="input-group col-xs-6 col-xs-offset-3">
+  <span class="input-group-addon glyphicon glyphicon-search " id="basic-addon1"></span>
+  <input type="text" class="form-control" placeholder="Search..." aria-describedby="basic-addon1">
+</div>
 
   <script type="text/javascript" src="./lib/node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="./lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
