--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <div class="input-group col-xs-6 col-xs-offset-3">
   <span class="input-group-addon glyphicon glyphicon-search " id="basic-addon1"></span>
-  <input type="text" class="form-control" placeholder="Search..." aria-describedby="basic-addon1">
+  <input type="text" class="form-control" placeholder="Search..." aria-describedby="basic-addon1" id="searchBar">
 </div>
 <div class="container-fluid"><p></p></div>
 <div id="movies" class="container"></div>
