active links for nav

--- a/index.html
+++ b/index.html
@@ -23,20 +23,38 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Authentication</a></li>
-        <li><a href="#">My Movies</a></li>
-        <li><a href="#">Search</a></li>
+        <li><a id="authBtn" >Authentication</a></li>
+        <li><a id="myMoviesBtn" >My Movies</a></li>
+        <li><a id="searchBtn" >Search</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="input-group col-xs-6 col-xs-offset-3">
-  <span class="input-group-addon glyphicon glyphicon-search " id="basic-addon1"></span>
-  <input type="text" class="form-control" placeholder="Search..." aria-describedby="basic-addon1" id="searchBar">
+
+<div class="container-fluid">
+
+  <div class="text-center hidden" id="myMovies">
+    <h1>My Movies</h1>
+  </div>
+
+  <div class="text-center hidden" id="search">
+    <h1> Search </h1>
+    <div class="input-group col-xs-6 col-xs-offset-3">
+      <span class="input-group-addon glyphicon glyphicon-search " id="basic-addon1"></span>
+      <input type="text" class="form-control" placeholder="Search..." aria-describedby="basic-addon1" id="searchBar">
+    </div>
+  </div>
+
+  <div class="text-center" id="authScreen">
+    <h1> Sign In </h1>
+    <button class="btn btn-lg btn-default" id="googleButton">
+      <img src="./images/google.png">
+    </button>
+  </div>
+
+  <div id="movies" class="container"></div>
 </div>
-<div class="container-fluid"><p></p></div>
-<div id="movies" class="container"></div>
   <script type="text/javascript" src="./lib/node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="./lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="./dist/app.js"></script>
