--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid navbar-inverse">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -48,7 +48,7 @@
 
   <div class="text-center" id="authScreen">
     <h1> Sign In </h1>
-    <button class="btn btn-lg btn-default" id="googleButton">
+    <button class="btn btn-xs btn-default" id="googleButton">
       <img src="./images/google.png">
     </button>
   </div>
