--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
   <div class="text-center hidden" id="myMovies">
     <h1>My Movies</h1>
+    <div id="moviesMine"></div>
   </div>
 
   <div class="text-center hidden" id="search">
