--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Movie History</a>
+      <a class="navbar-brand">Movie History</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,6 +45,7 @@
       <span class="input-group-addon glyphicon glyphicon-search " id="basic-addon1"></span>
       <input type="text" class="form-control" placeholder="Search..." aria-describedby="basic-addon1" id="searchBar">
     </div>
+    <div id="movies" class="container"></div>
   </div>
 
   <div class="text-center" id="authScreen">
@@ -54,7 +55,7 @@
     </button>
   </div>
 
-  <div id="movies" class="container"></div>
+
 </div>
   <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
   <script type="text/javascript" src="./lib/node_modules/jquery/dist/jquery.min.js"></script>
