add user rating

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Movie History</title>
   <link rel="stylesheet" type="text/css" href="./lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link href="./vendor/star-rating.min.css" media="all" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
 </head>
 
@@ -60,6 +61,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
   <script type="text/javascript" src="./lib/node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="./lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="./vendor/star-rating.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="./dist/app.js"></script>
 </body>
 </html>
